--- a/Repertoire/Repertoire/MainPage.xaml
+++ b/Repertoire/Repertoire/MainPage.xaml
@@ -44,10 +44,9 @@
                             <Label Grid.Column="1"
                            Text="{Binding Nom}"
                            FontAttributes="Bold" />
-                            <Label Grid.Row="1"
-                           Grid.Column="1"
-                           Text="{Binding Tel}"
-                           VerticalOptions="End" />
+                            <Label Grid.Row="1" Grid.Column="1"
+                           Text="{Binding Prenom}"
+                           FontAttributes="Bold" />
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
