--- a/Repertoire/Repertoire/Modifier.xaml
+++ b/Repertoire/Repertoire/Modifier.xaml
@@ -15,6 +15,10 @@
                     Text="{Binding Tel}"/>
             <Editor x:Name="mail"
                     Text="{Binding mail}"/>
+            <Editor x:Name="Adresse"
+                    Text="{Binding Adress}"/>
+            <Editor x:Name="Twitter"
+                    Text="{Binding PseudoTwitter}"/>
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
